     EOS

=== Core classes updates (outstanding ones only)

Enumerable::

  New method::

    * Added Enumerable#filter_map.  [Feature #15323]

    * Added Enumerable#tally.  [Feature #11076]

Enumerator::

  New method::

    * Added Enumerator::Yielder#to_proc so that a Yielder object
      can be directly passed to another method as a block
      argument.  [Feature #15618]

Integer::

  Modified method::

    * Integer#[] now supports range operation.  [Feature #8842]

         0b01001101[2, 4]  #=> 0b0011
         0b01001100[2..5]  #=> 0b0011
         0b01001100[2...6] #=> 0b0011
             ^^^^

Regexp/String::

    * Update Unicode version and Emoji version from 11.0.0 to
      12.0.0.  [Feature #15321]

    * Update Unicode version to 12.1.0, adding support for
      U+32FF SQUARE ERA NAME REIWA.  [Feature #15195]

Time::

    * Added Time#ceil method.  [Feature #15772]

    * Added Time#floor method.  [Feature #15653]

=== Stdlib updates (outstanding ones only)

Bundler::

  * Upgrade to Bundler 2.1.0.pre.1
    Bundled from https://github.com/bundler/bundler/commit/a53709556b95a914e874b22ed2116a46b0528852

CSV::

  * Upgrade to 3.0.9.
    See https://github.com/ruby/csv/blob/master/NEWS.md.

Date::

  * Date.jisx0301, Date#jisx0301, and Date.parse provisionally support the
    new Japanese era as an informal extension, until the new JIS X 0301 is
    issued.  [Feature #15742]

ERB::

  * Prohibit marshaling ERB instance.

IRB::

  * Introduce syntax highlight inspired by pry.gem to binding.irb source lines,
    REPL input, and inspect output of some core-class objects.

Net::IMAP::

  * Add Server Name Indication (SNI) support.  [Feature #15594]

RSS::

  * Upgrade to RSS 0.2.8.
    See https://github.com/ruby/rss/blob/master/NEWS.md.

RubyGems::

  * Upgrade to RubyGems 3.1.0.pre1
    Bundled from https://github.com/rubygems/rubygems/commit/97b264f0fa248c864b6ee9a23d3ff1cdd217dddb

=== Compatibility issues (excluding feature bug fixes)
